--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Huddle landing page" />
+    <meta name="description" content="Tip calculator app" />
     <link rel="stylesheet" href="base.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="buttons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon" />
-    <title>Huddle landing page</title>
+    <title>Tip calculator app</title>
   </head>
 
   <body>
