Button styling done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main></main>
+    <main>
+      <img
+        src="./assets/logo.svg"
+        class="logo"
+        alt="Splitter logo. 'SPLI' on one line and 'TTER' on another to indicate splitting."
+      />
+      <section class="card">
+        <div class="card-left"></div>
+        <div class="card-right">
+          <div></div>
+          <div></div>
+          <button class="btn btn-primary">Reset</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
