Right section of card done

--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
       <section class="card">
         <div class="card-left"></div>
         <div class="card-right">
-          <div></div>
-          <div></div>
-          <button class="btn btn-primary">Reset</button>
+          <section class="card-price-container">
+            <div>
+              <b class="body-text card-price-title">Tip Amount</b>
+              <p class="body-s-text card-price-subtitle">/ person</p>
+            </div>
+            <strong class="strong-text card-price-value">$0.00</strong>
+          </section>
+          <section class="card-price-container">
+            <div>
+              <b class="body-text card-price-title">Total</b>
+              <p class="body-s-text card-price-subtitle">/ person</p>
+            </div>
+            <strong class="strong-text card-price-value">$0.00</strong>
+          </section>
+          <button class="btn btn-primary btn-reset">Reset</button>
         </div>
       </section>
     </main>
