Input field styles added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         alt="Splitter logo. 'SPLI' on one line and 'TTER' on another to indicate splitting."
       />
       <section class="card">
-        <div class="card-left"></div>
+        <div class="card-left">
+          <div class="input-group">
+            <label class="body-text input-label" for="totalBill">Bill</label>
+            <input
+              type="number"
+              class="body-l-text input-field"
+              placeholder="0"
+              name="Total bill value"
+              id="totalBill"
+            />
+          </div>
+        </div>
         <div class="card-right">
           <section class="card-price-container">
             <div>
