Main inputs added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       />
       <section class="card">
         <div class="card-left">
-          <div class="input-group">
+          <div class="input-group" id="totalBillGroup">
             <label class="body-text input-label" for="totalBill">Bill</label>
             <input
               type="number"
@@ -32,6 +32,21 @@
               placeholder="0"
               name="Total bill value"
               id="totalBill"
+            />
+          </div>
+
+          <div class="input-group">
+            <label class="body-text input-label" for="tipPercentage">Select Tip %</label>
+          </div>
+
+          <div class="input-group" id="numberOfPeopleGroup">
+            <label class="body-text input-label" for="numberOfPeople">Number of People</label>
+            <input
+              type="number"
+              class="body-l-text input-field"
+              placeholder="0"
+              name="Number of people"
+              id="numberOfPeople"
             />
           </div>
         </div>
