Card in desktop view done, not responsive and not functional

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
           </div>
 
           <div class="input-group">
-            <label class="body-text input-label" for="tipPercentage">Select Tip %</label>
+            <label class="body-text input-label">Select Tip %</label>
+            <div class="input-tips-container">
+              <button class="body-l-text input-tip">5%</button>
+              <button class="body-l-text input-tip">10%</button>
+              <button class="body-l-text input-tip">15%</button>
+              <button class="body-l-text input-tip">25%</button>
+              <button class="body-l-text input-tip">50%</button>
+              <input type="number" class="body-l-text input-field" placeholder="Custom" id="input-field-tip"></input>
+            </div>
           </div>
 
           <div class="input-group" id="numberOfPeopleGroup">
