--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <div class="input-group">
             <label class="body-text input-label">Select Tip %</label>
             <div class="input-tips-container">
-              <button class="body-l-text input-tip" id="tip5">5%</button>
-              <button class="body-l-text input-tip" id="tip10">10%</button>
-              <button class="body-l-text input-tip" id="tip15">15%</button>
-              <button class="body-l-text input-tip" id="tip25">25%</button>
-              <button class="body-l-text input-tip" id="tip50">50%</button>
+              <button class="body-l-text input-tip" id="tip5" onclick="selectTip(5)">5%</button>
+              <button class="body-l-text input-tip" id="tip10" onclick="selectTip(10)">10%</button>
+              <button class="body-l-text input-tip" id="tip15" onclick="selectTip(15)">15%</button>
+              <button class="body-l-text input-tip" id="tip25" onclick="selectTip(25)">25%</button>
+              <button class="body-l-text input-tip" id="tip50" onclick="selectTip(50)">50%</button>
               <input type="number" class="body-l-text input-field" placeholder="Custom" id="input-field-tip"></input>
             </div>
           </div>
