Total price per person can be calculated - tip % calculation logic not added yet

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               placeholder="0"
               name="Total bill value"
               id="totalBill"
+              oninput="updateTotalBill(event)"
             />
           </div>
 
@@ -55,6 +56,7 @@
               placeholder="0"
               name="Number of people"
               id="numberOfPeople"
+              oninput="updateNumberOfPeople(event)"
             />
           </div>
         </div>
